# lassa-fever-forecast

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bootstrap.ps1  main.py  pyproject.toml
data/metadata/: checksums.csv  data_dictionary.csv  data_registry.csv
docs/: 00_Project_Master_Map.md  01_Project_Architecture.md  02_Data_Dictionary.md  03_Model_Registry.md  04_API_Documentation.md  05_Repository_Audit.md  CHANGELOG.md
notebooks/: 01_End_to_End_Lassa_Forecasting.ipynb  02_EDA.ipynb
scripts/: clean.ps1  create_docs.ps1  doctor.ps1  format.ps1  gate_check.ps1  lint.ps1  profile_dataset.ps1  run_all.ps1  test.ps1
src/lassa_fever_forecast/config/: config_loader.py  data_sources.yaml  logging.py  paths.py  settings.py
src/lassa_fever_forecast/data/: __init__.py  checksum.py  dataset_manager.py  downloader.py  fetch_epidemiology.py  fetch_weather.py  loaders.py  merge_datasets.py  process_weather.py  profiler.py  quality.py  registry.py  validators.py  versioning.py
src/lassa_fever_forecast/tasks/: __init__.py  dataset_registry.py  initialize_data.py  metadata_models.py  run_pipeline.py
src/lassa_fever_forecast/utils/: git_info.py  metadata.py
tests/integration/: test_epidemiology_pipeline.py
tests/unit/config/: test_config_loader.py
tests/unit/data/: test_checksum.py  test_dataset_manager.py  test_downloader.py  test_fetch_epidemiology.py  test_fetch_weather.py  test_loaders.py  test_process_weather.py  test_profiler.py  test_quality.py  test_registry.py  test_validators.py  test_versioning.py
tests/unit/tasks/: test_run_pipeline.py
