[project]
name = "lassa-fever-forecast"
version = "0.1.0"
description = "End-to-end machine learning pipeline for forecasting Lassa fever outbreaks in Nigeria."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "loguru==0.7.3",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "plotly==6.1.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "statsmodels==0.14.4",
    "tqdm==4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lassa_fever_forecast"]

[dependency-groups]
dev = [
    "black==25.1.0",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
